[package]
name = "chatgpt-free-api"
version = "0.5.0"
edition = "2021"
authors = ["xsigoking <xsigoking@gmail.com>"]
description = "Provide free GPT-3.5 API service by reverse engineering the login-free ChatGPT website"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xsigoking/chatgpt-free-api"
repository = "https://github.com/xsigoking/chatgpt-free-api"
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]
keywords = ["chatgpt", "api"]

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
bytes = "1.5"
chrono = "0.4.37"
env_logger = "0.11.3"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "client-legacy"] }
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }
sha3 = "0.10.8"
tokio = { version = "1.34.0", features = ["rt", "time", "macros", "rt-multi-thread"] }
tokio-graceful = "0.1.6"
tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.reqwest]
version = "0.12.0"
features = ["json", "multipart", "socks", "rustls-tls", "rustls-tls-native-roots"]
default-features = false

[profile.release]
lto = true
strip = true
opt-level = "z"
